--- a/index.html
+++ b/index.html
@@ -1,41 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>TIC TAC TOE</title>
-    <link rel="stylesheet" href="./assets/style.css">
-</head>
-<body class="body">
+    <link rel="stylesheet" href="./assets/style.css" />
+  </head>
+  <body class="body">
     <h1>Welcome to TIC TAC TOE Game</h1>
-<div class="container">
-    <div class="box">
-
-    </div>
-    <div class="box">
-
-    </div>
-    <div class="box">
-
-    </div>
-    <div class="box">
-
-    </div>
-    <div class="box">
-
-    </div>
-    <div class="box">
-
-    </div>
-    <div class="box">
-
-    </div>
-    <div class="box">
-
-    </div>
-    <div class="box">
-
-    </div>
-
-</div>
-    
-</body>
+    <center>
+      <div class="container">
+        <div class="box">X</div>
+        <div class="box">O</div>
+        <div class="box">X</div>
+        <div class="box">O</div>
+        <div class="box">X</div>
+        <div class="box">O</div>
+        <div class="box">O</div>
+        <div class="box">X</div>
+        <div class="box">O</div>
+      </div>
+    </center>
+  </body>
 </html>
